src/Pages/Product/Product.module.css
/* productTitle */
.productTitle{
    display: flex;
    justify-content: center;
}

/* productBody */
.productBody{
    display: flex;
    justify-content: space-between;
    height: 630px;
}

/* detailsSection */
.detailsSection{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 10px;
    margin: 50px 0;
}

/* productDetails */
.productDetails{
    background-color: aliceblue;
    padding: 15px;
}

.productDetails h3{
    margin: 0 0 10px 0;
}

.productDetails h4{
    margin: 0;
}

/* trend */
.trend{
    margin: 10px 0 70px 0;
}

@media (max-width: 1000px){
    /* product */
    .product{
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    /* productBody */
    .productBody{
        flex-direction: column;
        align-items: center;
        width: 500px;
    }

    /* detailsSection */
    .detailsSection{
        width: 500px;
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width:500px) {
    .productBody{
        width: 200px;
    }

    .detailsSection{
        justify-content: center;
        grid-template-columns: 200px;
    }
}

